# mshzip

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  README_kr.md  alembic.ini  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  server.js
.claude/: settings.json
.claude/hooks/: cc-check-validator.js  check-dangerous.js  command-log-enforcer.js  log-action.js  protect-sensitive.js  security-scan.js  session-summary.js  user-prompt-submit.js  validate-output.js
.claude/rules/: api.md  browser-test.md  command-log.md  general.md  guide.md  security.md
.github/workflows/: ci.yml
.ralph/: test-phase4-apis.py
.ralph/ralph-teams-fix/: PROGRESS.md  config.json  status.json
aimodel/: anthropic-pricing.json  google-pricing.json  openai-pricing.json  xai-pricing.json
alembic/: env.py
alembic/versions/: 625bb7317b3b_initial_tables.py
benchmarks/: analyze.js  bench-node.js  bench-python.py
config/: settings_admin.json
nodejs/: LICENSE  README.md  cli.js  package.json
nodejs/lib/: bit-dict.js  bit-reader.js  constants.js  coord-dict.js  dict-store.js  hamming.js  index.js  packer.js  parallel.js  reed-solomon.js  stream.js  unpacker.js  varint.js
nodejs/test/: benchmark-4k-movie.js  benchmark-large-movie.js  benchmark.js
public/: clear-cache.html  debug.html  index-mymind2-layout.html  index.html  login.html  module-test.html  payment-success.html  settings.html  test-browser.html  test-mathjax.html  test-toast-mathjax.html  test.html
public/css/: admin.css  animations.css  board.css  context-menu.css  editor.css  exact-mymind2-layout.css  exact-mymind2-mindmap.css  fonts.css  mymind2-layout.css  rtl.css  settings.css  tailwind-input.css  tailwind-output.css  theme-base.css  variables.css
public/js/: app-init.js  app-simple.js  app.js  auth-check.js  editor.js  math-fix.js  mindmap-config.js  mm-icons.js  mymind2-node-renderer.js  settings-2fa.js  settings-access-keys.js  settings-admin.js  settings-ai.js  settings-board-admin.js  settings.js  (+8 more)
python/: README.md  pyproject.toml
python/src/mshzip/: __init__.py  _ecc.c  _ecc_native.py  bit_dict.py  bit_reader.py  build_native.py  cli.py  constants.py  coord_dict.py  dict_store.py  hamming.py  packer.py  parallel.py  reed_solomon.py  stream.py  unpacker.py  varint.py
python/tests/: conftest.py  test_bitdict.py  test_bitdict_l2.py  test_cli.py  test_compat.py  test_dict_store.py  test_lifecycle.py  test_native_ecc.py  test_native_edge.py  test_native_error_inject.py  test_native_stress.py  test_packer.py  test_parallel.py  test_parallel_executor.py  test_parallel_openmp.py  test_parallel_safety.py  test_roundtrip.py  test_stream.py  test_unpacker.py  test_varint.py
spec/: FORMAT.md  generate-vectors.js
testpy/: AGGREGATION_RESULTS.json  API_TEST_REPORT.md  HOOK_TEST_REPORT.md  HOOK_TEST_RESULTS.txt  TEAMS-TEST-REPORT.md  TEST_AGGREGATION_DASHBOARD.md  add-review2-nodes.js  check-mermaid-render.js  check-mermaid-render2.js  find-node.js  inspect-json.js  mm-api.js  review2-node-ids.json  run-browser-test.js  run_hook_tests.js  settings-account-test.js  show-login-form.js  show-login-page.js  test-ai-model-restore.js  test-conn-browser.js  test-health-api.js  test-node-id-search.js  test-save-flow.js  test-session-auth.js  test-settings-account.js  test-todo-nodeid.js  update-mindmap.js  update-warn-nodes.js  verify-chrome-webapp.js  write-node-contents.js  write-review2-contents.js
tests/: conftest.py
(+1655 files in other folders)
