[project]
name = "mymind3v0"
version = "0.1.0"
description = "MyMind3 Python 이전 - AI 마인드맵 웹앱"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "redis>=5.0",
    "httpx>=0.27",
    "python-jose[cryptography]",
    "argon2-cffi",
    "python-multipart",
    "stripe>=7.0",
    "authlib>=1.3",
    "pyotp",
    "cryptography",
    "structlog",
    "aiofiles",
    "sse-starlette",
]

[project.optional-dependencies]
ai = [
    "openai>=1.50",
    "anthropic>=0.35",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
