[project]
name = "mshzip"
version = "1.0.0"
description = "Fixed-chunk dedup + entropy compression utility (MSH1 binary format)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["compression", "dedup", "binary", "msh"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Archiving :: Compression",
]
dependencies = []

[project.scripts]
mshzip = "mshzip.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mshzip"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
