[project]
name = "mshzip"
version = "2.0.1"
description = "Fixed-chunk dedup + entropy compression with ECC protection and C native acceleration (MSH1 format)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["compression", "dedup", "binary", "msh", "ecc", "hamming", "error-correction", "coorddict"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C",
    "Topic :: System :: Archiving :: Compression",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/brilante/mshzip"
Repository = "https://github.com/brilante/mshzip"

[project.scripts]
mshzip = "mshzip.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
artifacts = ["src/mshzip/_ecc.c"]

[tool.hatch.build.targets.wheel]
packages = ["src/mshzip"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
